tests/snapshots/snapshot_port_scan__port_scan_shows_the_ticker_before_the_first_progress_update.snap
---
source: tests/snapshot_port_scan.rs
expression: term.backend()
---
"┌1 IPs discovered────────────────────────────────────────────────────────v1.2.3┐"
"│   IP        Name       Hits  Services                                        █"
"│              ╭Port scan 10.0.0.3 (nas.local)───────────────────╮             █"
"│ █ 10.0.0.3  n│                                                 │             █"
"│              │ 1-1023                                          │             █"
"│              │ 64 workers   100ms   max 1.6s                   │             █"
"│              │                                                 │             █"
"│              │                                                 │             █"
"│              │ 1m 40s                                          │             █"
"│              │                     0/1023                      │             █"
"│              │                                                 │             █"
"│              │                                                 │             █"
"└──────────────│                                                 │─────────────┘"
"               │                                                 │              "
" Log Level: Inf│                                                 │              "
"               │ <Esc>: cancel                                   │              "
"               │                                                 │              "
"               ╰─────────────────────────────────────────────────╯              "
"                                                                                "
"                                                                                "
